# telenews

./: .env  CLAUDE.md  DEVELOPMENT.md  IMPORT_FIX_GUIDE.md  README.md  RUN_GUIDE.md  SPEC.md  TODO.md  alembic.ini  config.env.template  pyproject.toml  requirements.txt  run_project.ps1  run_project.py  run_project.sh  run_service.bat  run_service.py  run_service.sh  setup.py  telegram_aggregator.session  telegram_aggregator.session-journal
.claude/: settings.local.json
migrations/: env.py
scripts/: setup_dev.py
src/: __init__.py
src/aggregator/: __init__.py  main.py  telegram_client.py
src/ai_analysis/: __init__.py  llm_client.py  main.py  message_processor.py  prompt_manager.py
src/alerting/: __init__.py  alert_delivery.py  bot_handlers.py  main.py
src/shared/: __init__.py  config.py  database.py  logging.py  messaging.py  models.py
src/smart_analysis/: __init__.py  alert_analyzer.py  main.py  mcp_server.py
tests/: __init__.py  conftest.py
tests/integration/: test_full_pipeline.py
tests/unit/: test_models.py
